--- a/slf4j-api/pom.xml
+++ b/slf4j-api/pom.xml
@@ -18,19 +18,12 @@
 
   <url>http://www.slf4j.org</url>
 
-  <properties>
-    <grt-testing.basedir>${grt-testing.basedir}</grt-testing.basedir>
-    <grt-testing.major.jar>build/major/lib/major.jar</grt-testing.major.jar>
-    <grt-testing.plugin>${grt-testing.plugin}</grt-testing.plugin>
-  </properties>
-
   <dependencies>
     <dependency>
-      <groupId>major</groupId>
-      <artifactId>major</artifactId>
-      <version>2.2.0</version>
-      <scope>system</scope>
-      <systemPath>${grt-testing.basedir}/${grt-testing.major.jar}</systemPath>
+      <groupId>org.checkerframework</groupId>
+      <artifactId>checker-qual</artifactId>
+      <version>3.49.5</version>
+      <scope>provided</scope>
     </dependency>
   </dependencies> 
 
@@ -87,24 +80,12 @@
           </execution>
         </executions>
         <configuration>
-          <tasks>
+          <target>
             <echo>Removing slf4j-api's dummy StaticLoggerBinder and StaticMarkerBinder</echo>
             <delete dir="target/classes/org/slf4j/impl"/>
-          </tasks>
+          </target>
         </configuration>
       </plugin>
-
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-compiler-plugin</artifactId>
-        <configuration>
-          <testExcludes>
-            <exclude>**/*</exclude>
-          </testExcludes>
-          <compilerArgument>${grt-testing.plugin}</compilerArgument>
-        </configuration>
-      </plugin>
-
 
     </plugins>
 
