Correctly remove dummy binders; don't compile tests

--- a/slf4j-api/pom.xml
+++ b/slf4j-api/pom.xml
@@ -87,10 +87,10 @@
           </execution>
         </executions>
         <configuration>
-          <tasks>
+          <target>
             <echo>Removing slf4j-api's dummy StaticLoggerBinder and StaticMarkerBinder</echo>
-            <delete dir="target/classes/org/slf4j/impl"/>
-          </tasks>
+            <delete dir="target/classes/org1/slf4j/impl"/>
+          </target>
         </configuration>
       </plugin>
 
